Fix burger menu always visible: override display:flex with [hidden] rule
display:flex on .view-menu was overriding the browser's [hidden] stylesheet.

--- a/viewer.css
+++ b/viewer.css
@@ -1105,6 +1105,8 @@ a.uri-segment:hover {
   position: relative;
 }
 
+.view-menu[hidden] { display: none; }
+
 .view-menu {
   position: absolute;
   top: calc(100% + 6px);
